# ml-zoomcamp-jpurrutia

./: .gitignore  CLAUDE.md  Makefile  README.md  log.md  main.py  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json  setup-codespace.sh
config/: settings.py
module_one/: notes.md  scrap_book.ipynb
scripts/: download_data.py
