[project]
name = "ml-zoomcamp-jpurrutia"
version = "0.1.0"
description = "Machine Learning Zoomcamp 2025 - JP Urrutia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipdb>=0.13.13",
]
ml-heavy = [
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "tensorflow>=2.15.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
]
